[package]
name = "ed25519-dalek-db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base58 = "0.1.0"
ed25519 = "1.0.3"
ed25519-dalek = "1"

[dependencies.node-bindgen]
version = "4"
features = []
[build_dependencies.node-bindgen]
version = "4"
features = ["build"]
