[package]
name = "ed25519-dalek-db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base58 = "0.1.0"
base64 = "0.13.0"
ed25519 = "1.0.3"

[dependencies.ed25519-dalek]
git = "https://github.com/mattcollier/ed25519-dalek"
branch = "develop-simd"
features = ["simd_backend"]

[dependencies.node-bindgen]
git = "https://github.com/infinyon/node-bindgen"
branch = "master"
features = []
[build_dependencies.node-bindgen]
git = "https://github.com/infinyon/node-bindgen"
branch = "master"
features = ["build"]
